# lypaste

./: .dir-locals.el  .gitignore  Application.hs  Foundation.hs  Makefile  Model.hs  README.md  etags-regen.sh  lypaste.cabal  sdb.hs  stack.yaml
Handler/: Browse.hs  BrowsePage.hs  Home.hs  PasteDelete.hs  PasteEdit.hs  PasteNew.hs  PasteRaw.hs  PasteView.hs
Model/: Paste.hs
View/: Form.hs
app/: devel.hs
config/: keter.yml  models  routes  settings.yml  test-settings.yml
static/highlight/: highlight.pack.js
templates/: default-layout-wrapper.hamlet  default-layout.lucius  paste-form.hamlet  paste-form.julius  paste-form.lucius  paste-view.hamlet
test/Handler/: BrowsePageSpec.hs  BrowseSpec.hs  PasteDeleteSpec.hs  PasteEditSpec.hs  PasteNewSpec.hs  PasteRawSpec.hs  PasteViewSpec.hs
