name:              lypaste
version:           0.0.0
cabal-version:     >=1.10
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs: ., app
    exposed-modules:
       Application
       Foundation
       Handler.Common
       Handler.Home
       Handler.PasteDelete
       Handler.PasteEdit
       Handler.PasteNew
       Handler.PasteRaw
       Handler.PasteView
       Import
       Import.NoFoundation
       Model
       Model.Paste
       Settings
       Settings.StaticFiles

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        ghc-options:   -Wall -fwarn-tabs -O2

    default-extensions:
      CPP
      DeriveDataTypeable
      EmptyDataDecls
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      LambdaCase
      MultiParamTypeClasses
      NoImplicitPrelude
      NoMonomorphismRestriction
      OverloadedStrings
      QuasiQuotes
      RecordWildCards
      TemplateHaskell
      TupleSections
      TypeFamilies
      ViewPatterns

    build-depends:
        aeson
      , base ==4.8.*
      , base16-bytestring
      , bytestring
      , classy-prelude
      , classy-prelude-conduit
      , classy-prelude-yesod
      , conduit
      , containers
      , crypto-random
      , data-default
      , directory
      , either
      , fast-logger
      , file-embed
      , hjsmin
      , http-conduit
      , lens
      , monad-control
      , monad-logger
      , pandoc
      , persistent
      , persistent-postgresql
      , persistent-template
      , safe
      , shakespeare
      , template-haskell
      , text
      , time
      , unordered-containers
      , vector
      , wai-extra
      , wai-logger
      , warp
      , yaml
      , yesod
      , yesod-auth
      , yesod-core
      , yesod-form
      , yesod-markdown
      , yesod-static

executable  lypaste
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base, lypaste

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    hs-source-dirs:    test
    ghc-options:       -Wall

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections

    build-depends: base
                 , lypaste
                 , yesod-test >= 1.4.3 && < 1.5
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-postgresql
                 , resourcet
                 , monad-logger
                 , shakespeare
                 , transformers
                 , hspec >= 2.0.0
                 , classy-prelude
                 , classy-prelude-yesod
